@@ -173,7 +173,7 @@ function wcs_set_objects_property( &$object, $key, $value, $save = 'save', $meta
 
 		$object->{ "set$prefixed_key" }( $value );
 
-	// If there is a setter without the order prefix (eg set_order_total -> set_total)
+		// If there is a setter without the order prefix (eg set_order_total -> set_total)
 	} elseif ( is_callable( array( $object, 'set' . str_replace( '_order', '', $prefixed_key ) ) ) ) {
 		$function_name = 'set' . str_replace( '_order', '', $prefixed_key );
 		$object->$function_name( $value );
@@ -657,7 +657,11 @@ function wcs_set_order_address( $order, $address, $address_type = 'billing' ) {
  * @return string The page screen ID. On CPT stores, the screen ID is equal to the post type. On HPOS, the screen ID is generated by WC and fetched via wc_get_page_screen_id().
  */
 function wcs_get_page_screen_id( $object_type ) {
-	return wcs_is_woocommerce_pre( '7.3.0' ) ? $object_type : wc_get_page_screen_id( $object_type );
+	if ( ! function_exists( 'wc_get_page_screen_id' ) || wcs_is_woocommerce_pre( '7.3.0' ) ) {
+		return $object_type;
+	}
+
+	return wc_get_page_screen_id( $object_type );
 }
 
 /**
